--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^6.0.0",
+    "express-jwt-authz": "^2.4.1",
     "helmet": "^7.0.0",
     "jwks-rsa": "^2.0.5"
   },
