--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
     "helmet": "^7.0.0",
-    "jwks-rsa": "^2.0.5"
+    "jwks-rsa": "^2.0.5",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.3.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
