--- a/backend/package.json
+++ b/backend/package.json
@@ -20,16 +20,19 @@
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.1",
     "jwks-rsa": "^2.0.5",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/express-jwt": "^7.4.2",
     "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
