--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.1.5",
     "@auth0/auth0-angular": "^2.2.0",
     "bootstrap": "^5.3.0",
+    "chart.js": "^4.3.2",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
