--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "@auth0/auth0-angular": "^2.2.0",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.2",
+    "chartjs-adapter-moment": "^1.0.1",
+    "moment": "^2.29.4",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
