--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.2",
     "chartjs-adapter-moment": "^1.0.1",
+    "cropperjs": "^1.5.13",
     "moment": "^2.29.4",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
