--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -92,10 +92,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css",
-              "node_modules/cooperjs/dist/cropper.css"
-            ],
-            "scripts": ["node_modules/cooperjs/dist/cropper.js"]
+              "src/styles.css"
+            ]
           }
         }
       }
