changes to front and backend to get percentage and user scores

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.2",
     "chartjs-adapter-moment": "^1.0.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
@@ -35,6 +36,7 @@
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.5",
     "@types/jasmine": "~4.3.0",
+    "@types/lodash": "^4.14.197",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
